objects/Form__c.object
<CustomObject>
    <fields>
        <fullName>AC_Disconnected_Model_Numbers__c</fullName>
        <description>if applicable</description>
        <inlineHelpText>if applicable</inlineHelpText>
        <label>AC Disconnected Model Numbers</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ALL_trash_cleaned_up_JCO__c</fullName>
        <defaultValue>false</defaultValue>
        <description>ALL trash cleaned up and roof anchor holes properly sealed and flashed:</description>
        <inlineHelpText>ALL trash cleaned up and roof anchor holes properly sealed and flashed:</inlineHelpText>
        <label>ALL trash cleaned up</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Age_of_roof__c</fullName>
        <label>Age of roof</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>All_electrical_equipment_installed_JCO__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Has all electrical equipment been installed per NEC and local AHJ requirements?</description>
        <inlineHelpText>Has all electrical equipment been installed per NEC and local AHJ requirements?</inlineHelpText>
        <label>All electrical equipment been installed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>All_hardware_securely_fasten_JCO__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is all hardware securely fasten to manufacturer torque values?</description>
        <inlineHelpText>Is all hardware securely fasten to manufacturer torque values?</inlineHelpText>
        <label>All hardware securely fasten</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>All_properly_flashed_and_sealed_JCO__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Are all roof attachments/penetrations properly flashed and sealed?</description>
        <inlineHelpText>Are all roof attachments/penetrations properly flashed and sealed?</inlineHelpText>
        <label>All properly flashed and sealed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>All_rails_and_splice_kits_installed_JCO__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Are all rails and splice kits installed per SPD Standards and Permitted Design?</description>
        <inlineHelpText>Are all rails and splice kits installed per SPD Standards and Permitted Design?</inlineHelpText>
        <label>All rails and splice kits installed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Are_all_J_boxes_properly_assembled_JCO__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Are all J-boxes properly assembled, labeled and sealed per SPD standards?</description>
        <inlineHelpText>Are all J-boxes properly assembled, labeled and sealed per SPD standards?</inlineHelpText>
        <label>Are all J-boxes properly assembled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Are_all_connectors_properly_secured_JCO__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Are all connectors properly secured and all end caps installed?:</description>
        <label>Are all connectors properly secured</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Are_all_wires_managed_JCO__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Are all wires managed under the array and no wires between roof and rail?:</description>
        <inlineHelpText>Are all wires managed under the array and no wires between roof and rail?:</inlineHelpText>
        <label>Are all wires managed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Are_modules_bonded_JCO__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Are modules bonded per manufacture and AHJ installation methods?:</description>
        <inlineHelpText>Are modules bonded per manufacture and AHJ installation methods?:</inlineHelpText>
        <label>Are modules bonded?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Are_the_modules_clean_JCO__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Are the modules clean and all stickers removed?:</description>
        <inlineHelpText>Are the modules clean and all stickers removed?:</inlineHelpText>
        <label>Are the modules clean</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Aurora_Layout_PictureID__c</fullName>
        <description>Aurora Layout Picture ( Label pic with BOS/MSP/Router/GRD):</description>
        <inlineHelpText>Aurora Layout Picture ( Label pic with BOS/MSP/Router/GRD):</inlineHelpText>
        <label>Aurora Layout Picture ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Aurora_Layout_Picture__c</fullName>
        <description>Aurora Layout Picture ( Label pic with BOS/MSP/Router/GRD)</description>
        <formula>IMAGE(&quot;/servlet/servlet.FileDownload?file=&quot;+ Aurora_Layout_PictureID__c, &quot;SAMPLE PICTURE&quot;,200, 200)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Aurora Layout Picture ( Label pic with BOS/MSP/Router/GRD)</inlineHelpText>
        <label>Aurora Layout Picture</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Aurora_Layout_Picture_cb__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Aurora Layout Picture</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Available_Slots_in_Router_ID__c</fullName>
        <label>Available Slots in Router ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Available_Slots_in_Router_cb__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Available Slots in Router</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Breaker_PhotoID__c</fullName>
        <label>Breaker Photo ID:</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Breaker_Photo_cb__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Breaker Photo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Center_Fed__c</fullName>
        <label>Center-Fed?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Close_Up_of_Solar_Breaker_s_JCO__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Close Up of Solar Breaker(s), including PVS breaker</description>
        <inlineHelpText>Close Up of Solar Breaker(s), including PVS breaker</inlineHelpText>
        <label>Close Up of Solar Breaker(s)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Conduit_penetration_showing_flashing_JCO__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Conduit penetration showing flashing (includes eave penetration)</description>
        <inlineHelpText>Conduit penetration showing flashing (includes eave penetration)</inlineHelpText>
        <label>Conduit penetration showing flashing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Consumption_Monitoring_CTs_installed_JCO__c</fullName>
        <label>Consumption Monitoring CTs installed?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Crew_Names_JCO__c</fullName>
        <label>Crew Names</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Customer_First_and_Last_Name__c</fullName>
        <label>Customer First and Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DC_Disconnected_Model_Numbers__c</fullName>
        <description>If applicable</description>
        <inlineHelpText>If applicable</inlineHelpText>
        <label>DC Disconnected Model Numbers</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DEAD_FRONT_REMOVED_JCO__c</fullName>
        <defaultValue>false</defaultValue>
        <description>DEAD FRONT REMOVED, showing CTs installed (or non-compatible bussing)</description>
        <inlineHelpText>DEAD FRONT REMOVED, showing CTs installed (or non-compatible bussing)</inlineHelpText>
        <label>DEAD FRONT REMOVED</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Does_the_home_have_fire_sprinklers_insta__c</fullName>
        <description>Does the home have fire sprinklers installed?</description>
        <inlineHelpText>Does the home have fire sprinklers installed?</inlineHelpText>
        <label>Does the home have fire sprinklers insta</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Does_the_installation_efficient_JCO__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Does the installation reflect the highest aesthetics and install efficiency?</description>
        <inlineHelpText>Does the installation reflect the highest aesthetics and install efficiency?</inlineHelpText>
        <label>Does the installation efficient?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Electrical_MSP_Notes__c</fullName>
        <label>Electrical / MSP Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Electrical_Service_Entrance_PictureID__c</fullName>
        <label>Electrical Service Entrance Picture ID:</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Electrical_Service_Entrance_Picture_cb__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Electrical Service Entrance Picture</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Electrical_equipment_JCO__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Electrical equipment - wide angle shot including all equipment</description>
        <inlineHelpText>Electrical equipment - wide angle shot including all equipment</inlineHelpText>
        <label>Electrical equipment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ethernet_Switch_Required__c</fullName>
        <label>Ethernet Switch Required?:</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Existing_System_PhotoID__c</fullName>
        <label>Existing System Photo ID:</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Existing_System_Photo_cb__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Existing System Photo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Extra_Photo3ID__c</fullName>
        <label>Extra Photo ID (3):</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Extra_PhotoID1__c</fullName>
        <label>Extra Photo ID (1):</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Extra_PhotoID2__c</fullName>
        <label>Extra Photo ID (2):</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Extra_Photo_1_cb__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Extra Photos</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Extra_Photo_2_cb__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Extra Photo (2):</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Extra_Photo_3_cb__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Extra Photo (3):</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Flashing_up_to_and_including_L_foot_JCO__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Attachment showing flashing up to and including L-foot</description>
        <inlineHelpText>Attachment showing flashing up to and including L-foot</inlineHelpText>
        <label>Flashing up to and including L-foot</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Foam_Insulation_below_the_roof_material__c</fullName>
        <description>Foam Insulation below the roof material</description>
        <label>Foam Insulation below the roof material</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Form_Record_Type__c</fullName>
        <label>Form Record Type</label>
        <picklist>
            <picklistValues>
                <fullName>Site Survey Form</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Job Hazard Analysis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Job Checkout Form</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Front_of_Home_From_Down_the_StID__c</fullName>
        <label>Front of Home From Down the St.ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Front_of_Home_From_Down_the_St_cb__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Front of Home From Down the St</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Front_of_Home_From_Up_the_StID__c</fullName>
        <label>Front of Home From Up the St ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Front_of_Home_From_Up_the_St_cb__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Front of Home From Up the St</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Front_of_homeID__c</fullName>
        <description>Front of home &quot; Close up shot Showing Address 10 ft away&quot;:</description>
        <inlineHelpText>Front of home &quot; Close up shot Showing Address 10 ft away&quot;:</inlineHelpText>
        <label>Front of home ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Front_of_home_cb__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Front of home</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GEC_PictureID__c</fullName>
        <label>GEC Picture ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GEC_Picture_cb__c</fullName>
        <defaultValue>false</defaultValue>
        <label>GEC Picture</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GEC_Types_LocationsID__c</fullName>
        <label>GEC Types &amp; Locations ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hand_Draw_Route_PIC_4_Router_ID__c</fullName>
        <label>Hand Draw Route /PIC 4 Router ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hand_Draw_Route_PIC_4_Router_cb__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hand Draw Route /PIC 4 Router</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hardwire_or_PLC__c</fullName>
        <description>Hardwire or PLC? Describe route, aesthetic concerns, and options::</description>
        <label>Hardwire or PLC?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Homeowner_FirstName_JCO__c</fullName>
        <label>Homeowner (First Name):</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Homeowner_LastName_JCO__c</fullName>
        <label>Homeowner (Last Name)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>How_many_Inverters__c</fullName>
        <label>How many Inverters?</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Inside_each_rooftop_junction_box_1_JCO__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Inside each rooftop junction box. Show String Labeling</description>
        <inlineHelpText>Inside each rooftop junction box. Show String Labeling</inlineHelpText>
        <label>Inside each rooftop junction box (1)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Inside_each_rooftop_junction_box_2_JCO__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Inside each rooftop junction box. Show String Labeling</description>
        <inlineHelpText>Inside each rooftop junction box. Show String Labeling</inlineHelpText>
        <label>Inside each rooftop junction box (2)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Inside_each_rooftop_junction_box_3_JCO__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Inside each rooftop junction box. Show String Labeling</description>
        <inlineHelpText>Inside each rooftop junction box. Show String Labeling</inlineHelpText>
        <label>Inside each rooftop junction box (3)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>InstalledRailsOn1Side_of_full_array_JCO__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Installed rails on one side of full array:</description>
        <inlineHelpText>Installed rails on one side of full array:</inlineHelpText>
        <label>Installed rails on 1 side of full array</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Insulation_below_the_roof_material_cb__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Foam Insulation below the roof material Picture</description>
        <inlineHelpText>Foam Insulation below the roof material Picture</inlineHelpText>
        <label>Insulation below the roof material</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Inverter_Model_or_Manufacturer__c</fullName>
        <label>Inverter Model # or Manufacturer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inverter_PVS5_Serial__c</fullName>
        <label>Inverter/PVS5 Serial #</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inverter_PhotosID__c</fullName>
        <label>Inverter Photos ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inverter_Photos_cb__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Knock-Out for Tie-in/Load Relocation DRAW on PIC</description>
        <inlineHelpText>Knock-Out for Tie-in/Load Relocation DRAW on PIC</inlineHelpText>
        <label>Inverter Photos</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_the_array_wiring_free_from_JCO__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is the array wiring free from damage, secured with clips, and installed to spec?:</description>
        <inlineHelpText>Is the array wiring free from damage, secured with clips, and installed to spec?:</inlineHelpText>
        <label>Is the array wiring free from</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_there_a_Sub_Panel__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is there a Sub Panel?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Job__c</fullName>
        <label>Job</label>
        <referenceTo>sked__Job__c</referenceTo>
        <relationshipLabel>Forms</relationshipLabel>
        <relationshipName>Forms</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Knock_Out_for_Tie_inID__c</fullName>
        <description>Knock-Out for Tie-in/Load Relocation DRAW on PIC:</description>
        <inlineHelpText>Knock-Out for Tie-in/Load Relocation DRAW on PIC:</inlineHelpText>
        <label>Knock-Out for Tie-in ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Knock_Out_for_Tie_in_cb__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Knock-Out for Tie-in</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ladder_Access_Point_4_InstallID__c</fullName>
        <label>Ladder Access Point 4 Install ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ladder_Access_Point_4_Install_cb__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ladder Access Point 4 Install</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Layout_comply_JCO__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Does the layout comply with the attachment requirements of the racking system?</description>
        <inlineHelpText>Does the layout comply with the attachment requirements of the racking system?</inlineHelpText>
        <label>Layout comply?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Left_Side_of_HomeID__c</fullName>
        <label>Left Side of Home ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Left_Side_of_Home_cb__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Left Side of Home</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Location_of_MSP__c</fullName>
        <label>Location of MSP</label>
        <picklist>
            <picklistValues>
                <fullName>Front of home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Right side</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Left side</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Backyard</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MCB_Model__c</fullName>
        <label>MCB Model #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MSP_3_PicID__c</fullName>
        <label>MSP 3&apos; Pic ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MSP_3_Pic_cb__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MSP 3&apos; Pic</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MSP_Brand__c</fullName>
        <label>MSP Brand</label>
        <picklist>
            <picklistValues>
                <fullName>GE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cutler Hammer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Squar D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Murray</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Siemens</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bryant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Westinghouse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pushmatic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sylvania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Federal Pacific</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bulldogg Pushmatic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zinsco</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Murry</fullName>
                <isActive>false</isActive>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MSP_Dead_Front_Off_TopID__c</fullName>
        <label>MSP Dead Front Off - Top ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MSP_Dead_Front_Off_Top_cb__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MSP Dead Front Off - Top</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MSP_Dead_Front_On_Overall_PictureID__c</fullName>
        <label>MSP Dead Front On / Overall Picture ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MSP_Dead_Front_On_Overall_Picture_cb__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MSP Dead Front On / Overall Picture</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MSP_Issues_Burnt_Buss_bar_Double_TapsID__c</fullName>
        <label>MSP Issues?Burnt Buss bar,Double TapsID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MSP_Issues_Burnt_Buss_bar_Double_Taps_cb__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MSP Issues?Burnt Buss bar,Double Taps</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MSP_Label_Shot_1_cb__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MSP Label Shot 1:</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MSP_Label_Shot_2_cb__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MSP Label Shot 2:</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MSP_Label_Shot_3_cb__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MSP Label Shot 3:</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MSP_Label_Shot_ID1__c</fullName>
        <label>MSP Label Shot ID 1:</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MSP_Label_Shot_ID2__c</fullName>
        <label>MSP Label Shot ID 2:</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MSP_Label_Shot_ID3__c</fullName>
        <label>MSP Label Shot ID 3:</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MSP_Line_Conductor_PictureID__c</fullName>
        <label>MSP Line Conductor Picture ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MSP_Line_Conductor_Picture_cb__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MSP Line Conductor Picture</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MSP_Line_Conductor_SizeID__c</fullName>
        <label>MSP Line Conductor Size ID:</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MSP_Line_Conductor_Size_cb__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MSP Line Conductor Size</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MSP_Line_Conductor_TypeID__c</fullName>
        <label>MSP Line Conductor Type ID:</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MSP_Line_Conductor_Type_cb__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MSP Line Conductor Type</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MSP_Panel_Rating__c</fullName>
        <label>MSP Panel Rating</label>
        <picklist>
            <picklistValues>
                <fullName>100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>125</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>150</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>200</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>225</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MSP_Site_Notes__c</fullName>
        <label>MSP Site Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MSP_Sub_Panel_Burn_Marks_cb__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MSP/Sub Panel Burn Marks</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MSP_or_Sub_3_from_Gas_Meter__c</fullName>
        <label>MSP or Sub 3&apos; from Gas Meter</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Main_Breaker_or_Feeder_Breaker_Size__c</fullName>
        <label>Main Breaker (or Feeder Breaker) Size</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Main_Circuit_Breaker_Zoom_inID__c</fullName>
        <label>Main Circuit Breaker-Zoom in ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Main_Circuit_Breaker_Zoom_in_cb__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Main Circuit Breaker-Zoom in</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Module_Type_JCO__c</fullName>
        <label>Module Type</label>
        <picklist>
            <picklistValues>
                <fullName>360AC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>345AC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>335AC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>327AC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>250AC</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Modules_installed_1_JCO__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Modules installed - show all panels in entire system</description>
        <inlineHelpText>Modules installed - show all panels in entire system</inlineHelpText>
        <label>Modules installed (1)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Modules_installed_2_JCO__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Modules installed - show all panels in entire system</description>
        <inlineHelpText>Modules installed - show all panels in entire system</inlineHelpText>
        <label>Modules installed (2)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Modules_installed_3_JCO__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Modules installed - show all panels in entire system</description>
        <inlineHelpText>Modules installed - show all panels in entire system</inlineHelpText>
        <label>Modules installed (3)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Monitoring_Commissioning_Complete_JCO__c</fullName>
        <label>Monitoring Commissioning Complete?:</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>